--- a/SHA_Shop/Views/Home/Login.cshtml
+++ b/SHA_Shop/Views/Home/Login.cshtml
@@ -9,93 +9,89 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <!--CSS Login-->
+    <link href="~/Assets/user/css/login.css" rel="stylesheet" />
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <title>Login</title>
-    <style>
-        * {
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
 
-        body {
-            background-color: rgb(219, 226, 226);
-        }
-
-        .row {
-            background: white;
-            border-radius: 30px;
-        }
-
-        img {
-            border-top-left-radius: 30px;
-            border-bottom-left-radius: 30px;
-        }
-
-        .btn1 {
-            border: none;
-            outline: none;
-            height: 50px;
-            width: 100%;
-            background-color: hotpink;
-            color: white;
-            border-radius: 4px;
-            font-weight: bold;
-        }
-
-            .btn1:hover {
-                background: white;
-                border: 1px solid;
-                color: black;
-            }
-    </style>
 </head>
 <body>
-
-    <section class="Form my-4 mx-5">
         <div class="container">
-            <div class="row no-gutters">
-                <div class="col-lg-5">
-                    <img src="https://i.pinimg.com/originals/e8/6a/1e/e86a1eae73edb95581589648f5995fc5.png" class="img-fluid" alt="Alternate Text" />
+            <div class="row px-3">
+                <div class="col-lg-10 col-lg-9 card flex-row mx-auto px-0">
+                    <div class="img-left d-none d-md-flex"></div>
+
+                    <div class="card-body">
+                        <h3 class="title text-center mt-4">
+                            Đăng nhập
+                        </h3>
+                        <form class="form-box px-3">
+                            <div class="form-input">
+                                <span><i class="fa fa-envelope-o"></i></span>
+                                <input type="email" name="" placeholder="Email" tabindex="10" required />
+                            </div>
+                            <div class="form-input">
+                                <span><i class="fa fa-key"></i></span>
+                                <input type="password" name="" placeholder="Password" required />
+                            </div>
+
+                            <div class="mb-3">
+                                <div class="custom-control custom-checkbox">
+                                    <input type="checkbox" class="custom-control-input" id="cb1" name="" />
+                                    <label class="custom-control-label" for="cb1">Remember me</label>
+                                </div>
+                            </div>
+
+                            <div class="mb-3">
+                                <button type="submit" class="btn-block text-uppercase">
+                                    Login
+                                </button>
+                            </div>
+
+                            <div class="text-right">
+                                <a href="#" class="forget-link">
+                                    Quên mật khẩu?
+                                </a>
+                            </div>
+
+                            <div class="text-center mb-3">
+                                hoặc đăng nhập với
+                            </div>
+
+                            <div class="row mb-3">
+                                <div class="col-4">
+                                    <a href="" class="btn btn-block btn-social btn-facebook">
+                                        facebook
+                                    </a>
+                                </div>
+
+                                <div class="col-4">
+                                    <a href="" class="btn btn-block btn-social btn-google">
+                                        google
+                                    </a>
+                                </div>
+
+                                <div class="col-4">
+                                    <a href="" class="btn btn-block btn-social btn-instagram">
+                                        instagram
+                                    </a>
+                                </div>
+                            </div>
+
+                            <hr class="my-4" />
+
+                            <div class="text-center mb-2">
+                                Bạn chưa có tài khoản?
+                                <a href="#" class="register-link">
+                                    Đăng ký tại đây
+                                </a>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <div class="col-lg-7 px-5 pt-5">
-                    <h1 class="font-weight-bold py-3">Đăng nhập</h1>
-                    @*<h4>Đăng nhập tài khoản của bạn</h4>*@
-                    <form>
-                        <div class="form-row">
-                            <div class="col-lg-7">
-                                <input type="email" placeholder="Email" class="form-control my-3 p-4">
-                            </div>
-                        </div>
-
-                        <div class="form-row">
-                            <div class="col-lg-7">
-                                <input type="password" placeholder="******" class="form-control my-3 p-4" ">
-                            </div>
-                        </div>
-
-                        <div class="form-row">
-                            <div class="col-lg-7">
-                                <button type="button" class="btn1 mt-3 mb-5 ">Login</button>
-                            </div>
-                        </div>
-                        <a href="#">Quên mật khẩu</a>
-                        <p>Bạn chưa có tài khoản? <a href="#">Đăng ký tại đây</a> </p>
-                    </form>
-                </div>
-
             </div>
         </div>
-
-    </section>
-
-
-
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
