--- a/SHA_Shop/Views/Shared/_Layout.cshtml
+++ b/SHA_Shop/Views/Shared/_Layout.cshtml
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -8,7 +7,7 @@
     <meta name="keywords" content="Ogani, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ogani | Template</title>
+    <title>SHA_Shop</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
@@ -21,7 +20,7 @@
     <link rel="stylesheet" href="/Assets/user/css/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="/Assets/user/css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="/Assets/user/css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="/Assets/user/css/style.css" type="text/css">
+    <link href="~/Assets/user/css/style.css" rel="stylesheet" type="text/css"/>
     
 </head>
 
@@ -42,7 +41,6 @@
                 <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
                 <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
             </ul>
-            <div class="header__cart__price">item: <span>$150.00</span></div>
         </div>
         <div class="humberger__menu__widget">
             <div class="header__top__right__auth">
@@ -66,7 +64,7 @@
                     </ul>
                 </li>
                 <li><a href="./blog.html">Blog</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="/Home/Contact">Contact</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -119,19 +117,19 @@
                 <div class="col-lg-6">
                     <nav class="header__menu">
                         <ul>
-                            <li class="active"><a href="./index.html">Home</a></li>
-                            <li><a href="./shop-grid.html">Shop</a></li>
+                            <li class="active" style="margin-right: 48px"><a href="./index.html">Trang chủ</a></li>
+                            <li><a href="./shop-grid.html">Giới thiệu</a></li>
                             <li>
-                                <a href="#">Pages</a>
+                                <a href="#">Trang</a>
                                 <ul class="header__menu__dropdown">
-                                    <li><a href="./shop-details.html">Shop Details</a></li>
-                                    <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-                                    <li><a href="./checkout.html">Check Out</a></li>
+                                    <li><a href="./shop-details.html">Sản phẩm</a></li>
+                                    <li><a href="./shoping-cart.html">Giỏ hàng</a></li>
+                                    <li><a href="./checkout.html">Thanh toán</a></li>
                                     <li><a href="./blog-details.html">Blog Details</a></li>
                                 </ul>
                             </li>
                             <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="/Home/Contact">Liên hệ</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -141,7 +139,7 @@
                             <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
                             <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
                         </ul>
-                        <div class="header__cart__price">item: <span>$150.00</span></div>
+                        
                     </div>
                 </div>
             </div>
@@ -233,9 +231,7 @@
     <script src="/Assets/user/js/mixitup.min.js"></script>
     <script src="/Assets/user/js/owl.carousel.min.js"></script>
     <script src="/Assets/user/js/main.js"></script>
-    
-
-
+ 
 </body>
 
 </html>
