--- a/SHA_Shop/Views/Shared/_Layout.cshtml
+++ b/SHA_Shop/Views/Shared/_Layout.cshtml
@@ -63,8 +63,8 @@
                         <li><a href="./blog-details.html">Blog Details</a></li>
                     </ul>
                 </li>
-                <li><a href="./blog.html">Blog</a></li>
-                <li><a href="/Home/Contact">Contact</a></li>
+                <li><a href="/Home/Blog">Blog</a></li>
+                <li><a href="/Home/Contact">Liên hệ</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -128,7 +128,7 @@
                                     <li><a href="./blog-details.html">Blog Details</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./blog.html">Blog</a></li>
+                            <li><a href="/Home/Blog">Blog</a></li>
                             <li><a href="/Home/Contact">Liên hệ</a></li>
                         </ul>
                     </nav>
@@ -222,6 +222,7 @@
         </div>
     </footer>
     <!-- Footer Section End -->
+
     <!-- Js Plugins -->
     <script src="/Assets/user/js/jquery-3.3.1.min.js"></script>
     <script src="/Assets/user/js/bootstrap.min.js"></script>
