create UI Contact, Login, ShopCart, ShopProduct, Checkout

--- a/SHA_Shop/Views/Home/Index.cshtml
+++ b/SHA_Shop/Views/Home/Index.cshtml
@@ -11,17 +11,17 @@
                 <div class="hero__categories">
                     <div class="hero__categories__all">
                         <i class="fa fa-bars"></i>
-                        <span>All departments</span>
+                        <span>Chủ đề</span>
                     </div>
                     <ul>
-                        <li><a href="#">Fresh Meat</a></li>
-                        <li><a href="#">Vegetables</a></li>
-                        <li><a href="#">Fruit & Nut Gifts</a></li>
-                        <li><a href="#">Fresh Berries</a></li>
-                        <li><a href="#">Ocean Foods</a></li>
+                        <li><a href="#">Sinh nhật</a></li>
+                        <li><a href="#">Ngày cưới</a></li>
+                        <li><a href="#">Chúc mùng</a></li>
+                        <li><a href="#">Trung thu</a></li>
+                        <li><a href="#">Valentine</a></li>
                         <li><a href="#">Butter & Eggs</a></li>
                         <li><a href="#">Fastfood</a></li>
-                        <li><a href="#">Fresh Onion</a></li>
+                        <li><a href="#">Fresh Onion</a></li> 
                         <li><a href="#">Papayaya & Crisps</a></li>
                         <li><a href="#">Oatmeal</a></li>
                         <li><a href="#">Fresh Bananas</a></li>
@@ -33,7 +33,7 @@
                     <div class="hero__search__form">
                         <form action="#">
                             <div class="hero__search__categories">
-                                Chủ đề
+                                Danh mục
                                 <span class="arrow_carrot-down"></span>
                             </div>
                             <input type="text" placeholder="Bạn cần tìm gì?">
@@ -66,13 +66,13 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="~/Assets/user/img/hero/banner-cake-1.jpg" alt="First slide">
+                            <img class="d-block w-100" src="~/Assets/user/img/hero/banner_cake_1.jpg" alt="First slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="~/Assets/user/img/hero/banner-cake-2.jpg" alt="Second slide">
+                            <img class="d-block w-100" src="~/Assets/user/img/hero/banner_cake_2.jpg" alt="Second slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="~/Assets/user/img/hero/banner-cake-3.jpg" alt="Third slide">
+                            <img class="d-block w-100" src="~/Assets/user/img/hero/banner_cake_3.jpg" alt="Third slide">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -95,28 +95,28 @@
         <div class="row">
             <div class="categories__slider owl-carousel">
                 <div class="col-lg-3">
-                    <div class="categories__item set-bg" data-setbg="/Assets/user/img/categories/cat-1.jpg">
-                        <h5><a href="#">Fresh Fruit</a></h5>
+                    <div class="categories__item set-bg" data-setbg="/Assets/user/img/categories/cat1.jpg">
+                        <h5><a href="#">Tiramisu classic</a></h5>
                     </div>
                 </div>
                 <div class="col-lg-3">
-                    <div class="categories__item set-bg" data-setbg="/Assets/user/img/categories/cat-2.jpg">
-                        <h5><a href="#">Dried Fruit</a></h5>
+                    <div class="categories__item set-bg" data-setbg="/Assets/user/img/categories/cat2.jpg">
+                        <h5><a href="#">Chocolate mousse</a></h5>
                     </div>
                 </div>
                 <div class="col-lg-3">
-                    <div class="categories__item set-bg" data-setbg="/Assets/user/img/categories/cat-3.jpg">
-                        <h5><a href="#">Vegetables</a></h5>
+                    <div class="categories__item set-bg" data-setbg="/Assets/user/img/categories/cat3.jpg">
+                        <h5><a href="#">Pancake Chocomint</a></h5>
                     </div>
                 </div>
                 <div class="col-lg-3">
-                    <div class="categories__item set-bg" data-setbg="/Assets/user/img/categories/cat-4.jpg">
-                        <h5><a href="#">drink fruits</a></h5>
+                    <div class="categories__item set-bg" data-setbg="/Assets/user/img/categories/cat4.jpg">
+                        <h5><a href="#">Chocolate Birthday</a></h5>
                     </div>
                 </div>
                 <div class="col-lg-3">
-                    <div class="categories__item set-bg" data-setbg="/Assets/user/img/categories/cat-5.jpg">
-                        <h5><a href="#">drink fruits</a></h5>
+                    <div class="categories__item set-bg" data-setbg="/Assets/user/img/categories/cat5.jpg">
+                        <h5><a href="#">Fruit Frenzy</a></h5>
                     </div>
                 </div>
             </div>
@@ -130,13 +130,13 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="section-title">
-                    <h2>Featured Product</h2>
+                    <h2>Sản phẩm nổi bật</h2>
                 </div>
                 <div class="featured__controls">
                     <ul>
-                        <li class="active" data-filter="*">All</li>
-                        <li data-filter=".oranges">Oranges</li>
-                        <li data-filter=".fresh-meat">Fresh Meat</li>
+                        <li class="active" data-filter="*">Tất cả</li>
+                        <li data-filter=".oranges">Bánh kem trái cây</li>
+                        <li data-filter=".fresh-meat">Bánh kem sinh nhật</li>
                         <li data-filter=".vegetables">Vegetables</li>
                         <li data-filter=".fastfood">Fastfood</li>
                     </ul>
@@ -146,7 +146,7 @@
         <div class="row featured__filter">
             <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fresh-meat">
                 <div class="featured__item">
-                    <div class="featured__item__pic set-bg" data-setbg="/Assets/user/img/featured/feature-1.jpg">
+                    <div class="featured__item__pic set-bg" data-setbg="/Assets/user/img/featured/feature1.jpg">
                         <ul class="featured__item__pic__hover">
                             <li><a href="#"><i class="fa fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -154,14 +154,14 @@
                         </ul>
                     </div>
                     <div class="featured__item__text">
-                        <h6><a href="#">Crab Pool Security</a></h6>
-                        <h5>$30.00</h5>
+                        <h6><a href="#">Cake 1</a></h6>
+                        <h5>695.000₫</h5>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mix vegetables fastfood">
                 <div class="featured__item">
-                    <div class="featured__item__pic set-bg" data-setbg="/Assets/user/img/featured/feature-2.jpg">
+                    <div class="featured__item__pic set-bg" data-setbg="/Assets/user/img/featured/feature2.jpg">
                         <ul class="featured__item__pic__hover">
                             <li><a href="#"><i class="fa fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -169,14 +169,14 @@
                         </ul>
                     </div>
                     <div class="featured__item__text">
-                        <h6><a href="#">Crab Pool Security</a></h6>
-                        <h5>$30.00</h5>
+                        <h6><a href="#">Cake 2</a></h6>
+                        <h5>750.000₫</h5>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mix vegetables fresh-meat">
                 <div class="featured__item">
-                    <div class="featured__item__pic set-bg" data-setbg="/Assets/user/img/featured/feature-3.jpg">
+                    <div class="featured__item__pic set-bg" data-setbg="/Assets/user/img/featured/feature3.jpg">
                         <ul class="featured__item__pic__hover">
                             <li><a href="#"><i class="fa fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -184,14 +184,14 @@
                         </ul>
                     </div>
                     <div class="featured__item__text">
-                        <h6><a href="#">Crab Pool Security</a></h6>
-                        <h5>$30.00</h5>
+                        <h6><a href="#">Cake 3</a></h6>
+                        <h5>350.000₫</h5>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mix fastfood oranges">
                 <div class="featured__item">
-                    <div class="featured__item__pic set-bg" data-setbg="/Assets/user/img/featured/feature-4.jpg">
+                    <div class="featured__item__pic set-bg" data-setbg="/Assets/user/img/featured/feature4.jpg">
                         <ul class="featured__item__pic__hover">
                             <li><a href="#"><i class="fa fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -199,14 +199,14 @@
                         </ul>
                     </div>
                     <div class="featured__item__text">
-                        <h6><a href="#">Crab Pool Security</a></h6>
-                        <h5>$30.00</h5>
+                        <h6><a href="#">Cake 4</a></h6>
+                        <h5>950.000₫</h5>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mix fresh-meat vegetables">
                 <div class="featured__item">
-                    <div class="featured__item__pic set-bg" data-setbg="/Assets/user/img/featured/feature-5.jpg">
+                    <div class="featured__item__pic set-bg" data-setbg="/Assets/user/img/featured/feature5.jpg">
                         <ul class="featured__item__pic__hover">
                             <li><a href="#"><i class="fa fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -214,14 +214,14 @@
                         </ul>
                     </div>
                     <div class="featured__item__text">
-                        <h6><a href="#">Crab Pool Security</a></h6>
-                        <h5>$30.00</h5>
+                        <h6><a href="#">Cake 5</a></h6>
+                        <h5>600.000₫</h5>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fastfood">
                 <div class="featured__item">
-                    <div class="featured__item__pic set-bg" data-setbg="/Assets/user/img/featured/feature-6.jpg">
+                    <div class="featured__item__pic set-bg" data-setbg="/Assets/user/img/featured/feature6.jpg">
                         <ul class="featured__item__pic__hover">
                             <li><a href="#"><i class="fa fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -229,14 +229,14 @@
                         </ul>
                     </div>
                     <div class="featured__item__text">
-                        <h6><a href="#">Crab Pool Security</a></h6>
-                        <h5>$30.00</h5>
+                        <h6><a href="#">Cake 6</a></h6>
+                        <h5>950.000₫</h5>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mix fresh-meat vegetables">
                 <div class="featured__item">
-                    <div class="featured__item__pic set-bg" data-setbg="/Assets/user/img/featured/feature-7.jpg">
+                    <div class="featured__item__pic set-bg" data-setbg="/Assets/user/img/featured/feature7.jpg">
                         <ul class="featured__item__pic__hover">
                             <li><a href="#"><i class="fa fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -244,14 +244,14 @@
                         </ul>
                     </div>
                     <div class="featured__item__text">
-                        <h6><a href="#">Crab Pool Security</a></h6>
-                        <h5>$30.00</h5>
+                        <h6><a href="#">Cake 7</a></h6>
+                        <h5>500.000₫</h5>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mix fastfood vegetables">
                 <div class="featured__item">
-                    <div class="featured__item__pic set-bg" data-setbg="/Assets/user/img/featured/feature-8.jpg">
+                    <div class="featured__item__pic set-bg" data-setbg="/Assets/user/img/featured/feature8.jpg">
                         <ul class="featured__item__pic__hover">
                             <li><a href="#"><i class="fa fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -259,8 +259,8 @@
                         </ul>
                     </div>
                     <div class="featured__item__text">
-                        <h6><a href="#">Crab Pool Security</a></h6>
-                        <h5>$30.00</h5>
+                        <h6><a href="#">Cake 8</a></h6>
+                        <h5>550.000₫</h5>
                     </div>
                 </div>
             </div>
@@ -274,12 +274,12 @@
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="banner__pic">
-                    <img src="/Assets/user/img/banner/banner-1.jpg" alt="">
+                    <img src="/Assets/user/img/banner/banner1.jpg" alt="">
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="banner__pic">
-                    <img src="/Assets/user/img/banner/banner-2.jpg" alt="">
+                    <img src="/Assets/user/img/banner/banner2.jpg" alt="">
                 </div>
             </div>
         </div>
