--- a/SHA_Shop/Views/Shared/_Layout.cshtml
+++ b/SHA_Shop/Views/Shared/_Layout.cshtml
@@ -34,28 +34,28 @@
     <div class="humberger__menu__overlay"></div>
     <div class="humberger__menu__wrapper">
         <div class="humberger__menu__logo">
-            <a href="#"><img src="img/logo.png" alt=""></a>
+            <a href="#"><img src="/Assets/user/img/logo1.png" alt=""></a>
         </div>
         <div class="humberger__menu__cart">
             <ul>
-                <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
-                <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
+                <li><a href="/Checkout/Checkout"><i class="fa fa-money"></i> <span>1</span></a></li>
+                <li><a href="/ShopCart/ShopCart"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
             </ul>
         </div>
         <div class="humberger__menu__widget">
             <div class="header__top__right__auth">
-                <a href="/Home/Login">
+                <a href="/Login/Login">
                     <i class="fa fa-user"></i>
-                    Login
+                    Đăng nhập
                 </a>
             </div>
         </div>
         <nav class="humberger__menu__nav mobile-menu">
             <ul>
-                <li class="active"><a href="./index.html">Home</a></li>
-                <li><a href="./shop-grid.html">Shop</a></li>
+                <li class="active"><a href="/">Trang chủ</a></li>
+                <li><a href="/Shop/Shop">Giới thiệu</a></li>
                 <li>
-                    <a href="#">Pages</a>
+                    <a href="ShopProduct/ShopProduct">Sản phẩm</a>
                     <ul class="header__menu__dropdown">
                         <li><a href="./shop-details.html">Shop Details</a></li>
                         <li><a href="./shoping-cart.html">Shoping Cart</a></li>
@@ -63,8 +63,8 @@
                         <li><a href="./blog-details.html">Blog Details</a></li>
                     </ul>
                 </li>
-                <li><a href="/Home/Blog">Blog</a></li>
-                <li><a href="/Home/Contact">Liên hệ</a></li>
+                <li><a href="/Blog/Blog">Blog</a></li>
+                <li><a href="/Contact/Contact">Liên hệ</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -100,7 +100,7 @@
                                 <a href="https://www.instagram.com/phucan332/"><i class="fa fa-instagram"></i></a>
                             </div>
                             <div class="header__top__right__auth">
-                                <a href="/Home/Login"><i class="fa fa-user"></i> Login</a>
+                                <a href="/Login/Login"><i class="fa fa-user"></i> Đăng nhập</a>
                             </div>
                         </div>
                     </div>
@@ -111,16 +111,15 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="/Assets/user/img/logo.png" alt=""></a>
+                        <a href="/"><img src="/Assets/user/img/logo1.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <nav class="header__menu">
                         <ul>
-                            <li class="active" style="margin-right: 48px"><a href="./index.html">Trang chủ</a></li>
-                            <li><a href="./shop-grid.html">Giới thiệu</a></li>
+                            <li class="active" style="margin-right: 48px"><a href="/">Trang chủ</a></li>
                             <li>
-                                <a href="#">Trang</a>
+                                <a href="/ShopProduct/ShopProduct">Sản phẩm</a>
                                 <ul class="header__menu__dropdown">
                                     <li><a href="./shop-details.html">Sản phẩm</a></li>
                                     <li><a href="./shoping-cart.html">Giỏ hàng</a></li>
@@ -128,16 +127,16 @@
                                     <li><a href="./blog-details.html">Blog Details</a></li>
                                 </ul>
                             </li>
-                            <li><a href="/Home/Blog">Blog</a></li>
-                            <li><a href="/Home/Contact">Liên hệ</a></li>
+                            <li><a href="/Blog/Blog">Blog</a></li>
+                            <li><a href="/Contact/Contact">Liên hệ</a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="col-lg-3">
                     <div class="header__cart">
                         <ul>
-                            <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
-                            <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
+                            <li><a href="/Checkout/Checkout"><i class="fa fa-money"></i> <span>1</span></a></li>
+                            <li><a href="/ShopCart/ShopCart"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
                         </ul>
                         
                     </div>
@@ -157,7 +156,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__about__logo">
-                            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                            <a href="/"><img src="/Assets/user/img/logo1.png" alt=""></a>
                         </div>
                         <ul>
                             <li>Địa chỉ: Quận 9, TP.HCM</li>
