--- a/SHA_Shop/Assets/user/css/style.css
+++ b/SHA_Shop/Assets/user/css/style.css
@@ -178,7 +178,7 @@ ol {
 	text-transform: uppercase;
 	display: inline-block;
 	padding: 13px 30px 12px;
-	background: #7fad39;
+	background: #ff3a95;
 	border: none;
 }
 
@@ -323,7 +323,7 @@ ol {
 	margin-right: 0;
 }
 
-.header__top__right__language {
+/*.header__top__right__language {
 	position: relative;
 	display: inline-block;
 	margin-right: 40px;
@@ -392,7 +392,7 @@ ol {
 	color: #ffffff;
 	padding: 5px 10px;
 }
-
+*/
 .header__top__right__auth {
 	display: inline-block;
 }
@@ -408,7 +408,7 @@ ol {
 }
 
 .header__logo {
-	padding: 15px 0;
+	padding: 12px 0;
 }
 
 .header__logo a {
@@ -416,7 +416,7 @@ ol {
 }
 
 .header__menu {
-	padding: 24px 0;
+	padding: 30px 0;
 }
 
 .header__menu ul li {
@@ -430,7 +430,7 @@ ol {
 	position: absolute;
 	left: 0;
 	top: 50px;
-	background: #222222;
+	background: #ff6fad;
 	width: 180px;
 	z-index: 9;
 	padding: 5px 0;
@@ -449,7 +449,7 @@ ol {
 }
 
 .header__menu ul li .header__menu__dropdown li:hover>a {
-	color: #7fad39;
+	color: greenyellow;
 }
 
 .header__menu ul li .header__menu__dropdown li a {
@@ -459,9 +459,9 @@ ol {
 	padding: 5px 15px;
 }
 
-.header__menu ul li.active a {
-	color: #7fad39;
-}
+	.header__menu ul li.active a {
+		color: #ff3a95;
+	}
 
 .header__menu ul li:hover .header__menu__dropdown {
 	top: 30px;
@@ -469,9 +469,9 @@ ol {
 	visibility: visible;
 }
 
-.header__menu ul li:hover>a {
-	color: #7fad39;
-}
+	.header__menu ul li:hover > a {
+		color: var(--pink);
+	}
 
 .header__menu ul li:last-child {
 	margin-right: 0;
@@ -494,7 +494,7 @@ ol {
 
 .header__cart {
 	text-align: right;
-	padding: 24px 0;
+	padding: 30px 0;
 }
 
 .header__cart ul {
@@ -521,21 +521,21 @@ ol {
 	color: #1c1c1c;
 }
 
-.header__cart ul li a span {
-	height: 13px;
-	width: 13px;
-	background: #7fad39;
-	font-size: 10px;
-	color: #ffffff;
-	line-height: 13px;
-	text-align: center;
-	font-weight: 700;
-	display: inline-block;
-	border-radius: 50%;
-	position: absolute;
-	top: 0;
-	right: -12px;
-}
+	.header__cart ul li a span {
+		height: 13px;
+		width: 13px;
+		background: #ff3a95;
+		font-size: 10px;
+		color: #ffffff;
+		line-height: 13px;
+		text-align: center;
+		font-weight: 700;
+		display: inline-block;
+		border-radius: 50%;
+		position: absolute;
+		top: 0;
+		right: -12px;
+	}
 
 .header__cart .header__cart__price {
 	font-size: 14px;
@@ -587,7 +587,7 @@ ol {
 }
 
 .hero__categories__all {
-	background: #7fad39;
+	background: #ff3a95;
 	position: relative;
 	padding: 10px 25px 10px 40px;
 	cursor: pointer;
@@ -641,7 +641,7 @@ ol {
 .hero__search__form {
 	width: 610px;
 	height: 50px;
-	border: 1px solid #ebebeb;
+	border: 1px solid var(--pink);
 	position: relative;
 	float: left;
 }
@@ -657,21 +657,22 @@ ol {
 	position: relative;
 }
 
-.hero__search__form form .hero__search__categories:after {
-	position: absolute;
-	right: 0;
-	top: 14px;
-	height: 20px;
-	width: 1px;
-	background: #000000;
-	opacity: 0.1;
-	content: "";
-}
+	.hero__search__form form .hero__search__categories:after {
+		position: absolute;
+		right: 0;
+		top: 14px;
+		height: 20px;
+		width: 1px;
+		background: var(--pink);
+		opacity: 0.5;
+		content: "";
+	}
 
 .hero__search__form form .hero__search__categories span {
 	position: absolute;
 	right: 14px;
 	top: 14px;
+	color: var(--pink);
 }
 
 .hero__search__form form input {
@@ -700,7 +701,7 @@ ol {
 
 .hero__search__phone__icon {
 	font-size: 18px;
-	color: #7fad39;
+	color: var(--pink);
 	height: 50px;
 	width: 50px;
 	background: #f5f5f5;
@@ -2073,25 +2074,25 @@ ol {
 	padding-bottom: 60px;
 }
 
-.checkout h6 {
-	color: #999999;
-	text-align: center;
-	background: #f5f5f5;
-	border-top: 1px solid #6AB963;
-	padding: 12px 0 12px;
-	margin-bottom: 75px;
-}
+	.checkout h6 {
+		color: #999999;
+		text-align: center;
+		background: #f5f5f5;
+		border-top: 1px solid #ff0075;
+		padding: 12px 0 12px;
+		margin-bottom: 75px;
+	}
 
-.checkout h6 span {
-	font-size: 16px;
-	color: #6AB963;
-	margin-right: 5px;
-}
+		.checkout h6 span {
+			font-size: 16px;
+			color: var(--pink);
+			margin-right: 5px;
+		}
 
-.checkout h6 a {
-	text-decoration: underline;
-	color: #999999;
-}
+		.checkout h6 a {
+			text-decoration: underline;
+			color: var(--pink);
+		}
 
 .checkout__form h4 {
 	color: #1c1c1c;
@@ -3411,7 +3412,7 @@ ol {
 	}
 	.header__cart {
 		text-align: center;
-		padding: 10px 0 24px;
+		padding: 48px 0;
 	}
 	.over_hid {
 		overflow: hidden;
