--- a/SHA_Shop/Views/Shared/_Layout.cshtml
+++ b/SHA_Shop/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     <div class="humberger__menu__overlay"></div>
     <div class="humberger__menu__wrapper">
         <div class="humberger__menu__logo">
-            <a href="#"><img src="/Assets/user/img/logo1.png" alt=""></a>
+            <a href="#"><img src="/Assets/user/img/logo.png" alt=""></a>
         </div>
         <div class="humberger__menu__cart">
             <ul>
@@ -111,7 +111,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="/"><img src="/Assets/user/img/logo1.png" alt=""></a>
+                        <a href="/"><img src="/Assets/user/img/logo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -156,7 +156,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__about__logo">
-                            <a href="/"><img src="/Assets/user/img/logo1.png" alt=""></a>
+                            <a href="/"><img src="/Assets/user/img/logo.png" alt=""></a>
                         </div>
                         <ul>
                             <li>Địa chỉ: Quận 9, TP.HCM</li>
