--- a/SHA_Shop/Views/ShopCart/ShopCart.cshtml
+++ b/SHA_Shop/Views/ShopCart/ShopCart.cshtml
@@ -63,10 +63,10 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <div class="breadcrumb__text">
-                    <h2>Sản phẩm</h2>
+                    <h2>Giỏ hàng</h2>
                     <div class="breadcrumb__option">
                         <a href="/">Trang chủ</a>
-                        <span>Sản phẩm</span>
+                        <span>Giỏ hàng</span>
                     </div>
                 </div>
             </div>
