--- a/SHA_Shop/Views/Shared/_Layout.cshtml
+++ b/SHA_Shop/Views/Shared/_Layout.cshtml
@@ -38,13 +38,13 @@
         </div>
         <div class="humberger__menu__cart">
             <ul>
-                <li><a href="/Checkout/Checkout"><i class="fa fa-money"></i> <span>1</span></a></li>
-                <li><a href="/ShopCart/ShopCart"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
+                <li><a href="/Checkout"><i class="fa fa-money"></i> <span>1</span></a></li>
+                <li><a href="/ShopCart"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
             </ul>
         </div>
         <div class="humberger__menu__widget">
             <div class="header__top__right__auth">
-                <a href="/Login/Login">
+                <a href="/User/Login">
                     <i class="fa fa-user"></i>
                     Đăng nhập
                 </a>
@@ -53,18 +53,12 @@
         <nav class="humberger__menu__nav mobile-menu">
             <ul>
                 <li class="active"><a href="/">Trang chủ</a></li>
-                <li><a href="/Shop/Shop">Giới thiệu</a></li>
+                <li><a href="/Shop">Giới thiệu</a></li>
                 <li>
-                    <a href="ShopProduct/ShopProduct">Sản phẩm</a>
-                    <ul class="header__menu__dropdown">
-                        <li><a href="./shop-details.html">Shop Details</a></li>
-                        <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-                        <li><a href="./checkout.html">Check Out</a></li>
-                        <li><a href="./blog-details.html">Blog Details</a></li>
-                    </ul>
+                    <a href="/Product">Sản phẩm</a>
                 </li>
-                <li><a href="/Blog/Blog">Blog</a></li>
-                <li><a href="/Contact/Contact">Liên hệ</a></li>
+                <li><a href="/Blog">Blog</a></li>
+                <li><a href="/Contact">Liên hệ</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -100,7 +94,7 @@
                                 <a href="https://www.instagram.com/phucan332/"><i class="fa fa-instagram"></i></a>
                             </div>
                             <div class="header__top__right__auth">
-                                <a href="/Login/Login"><i class="fa fa-user"></i> Đăng nhập</a>
+                                <a href="/User/Login"><i class="fa fa-user"></i> Đăng nhập</a>
                             </div>
                         </div>
                     </div>
@@ -119,24 +113,18 @@
                         <ul>
                             <li class="active" style="margin-right: 48px"><a href="/">Trang chủ</a></li>
                             <li>
-                                <a href="/ShopProduct/ShopProduct">Sản phẩm</a>
-                                <ul class="header__menu__dropdown">
-                                    <li><a href="./shop-details.html">Sản phẩm</a></li>
-                                    <li><a href="./shoping-cart.html">Giỏ hàng</a></li>
-                                    <li><a href="./checkout.html">Thanh toán</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
-                                </ul>
+                                <a href="/Product">Sản phẩm</a>
                             </li>
-                            <li><a href="/Blog/Blog">Blog</a></li>
-                            <li><a href="/Contact/Contact">Liên hệ</a></li>
+                            <li><a href="/Blog">Blog</a></li>
+                            <li><a href="/Contact">Liên hệ</a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="col-lg-3">
                     <div class="header__cart">
                         <ul>
-                            <li><a href="/Checkout/Checkout"><i class="fa fa-money"></i> <span>1</span></a></li>
-                            <li><a href="/ShopCart/ShopCart"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
+                            <li><a href="/Checkout"><i class="fa fa-money"></i> <span>1</span></a></li>
+                            <li><a href="/ShopCart"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
                         </ul>
                         
                     </div>
