Update UI Home, Product, Login, Register

--- a/SHA_Shop/Assets/user/css/User.css
+++ b/SHA_Shop/Assets/user/css/User.css
@@ -45,7 +45,7 @@
     background: transparent;
 }
 
-.form-input span{
+.form-input {
     position: absolute;
     top: 10px;
     padding-left: 15px;
