--- a/SHA_Shop/Views/Home/Index.cshtml
+++ b/SHA_Shop/Views/Home/Index.cshtml
@@ -13,13 +13,7 @@
                         <i class="fa fa-bars"></i>
                         <span>Danh mục</span>
                     </div>
-                    <ul>
-                        <li><a href="#">Sinh nhật</a></li>
-                        <li><a href="#">Ngày cưới</a></li>
-                        <li><a href="#">Chúc mùng</a></li>
-                        <li><a href="#">Trung thu</a></li>
-                        <li><a href="#">Valentine</a></li>
-                    </ul>
+                    @Html.Action("CategoryPartial", "Category")
                 </div>
             </div>
             <div class="col-lg-9">
