--- a/SHA_Shop/Views/ProductDetail/Index.cshtml
+++ b/SHA_Shop/Views/ProductDetail/Index.cshtml
@@ -12,20 +12,14 @@
                 <div class="hero__categories">
                     <div class="hero__categories__all">
                         <i class="fa fa-bars"></i>
-                        <span>All departments</span>
+                        <span>Danh mục</span>
                     </div>
                     <ul>
-                        <li><a href="#">Fresh Meat</a></li>
-                        <li><a href="#">Vegetables</a></li>
-                        <li><a href="#">Fruit & Nut Gifts</a></li>
-                        <li><a href="#">Fresh Berries</a></li>
-                        <li><a href="#">Ocean Foods</a></li>
-                        <li><a href="#">Butter & Eggs</a></li>
-                        <li><a href="#">Fastfood</a></li>
-                        <li><a href="#">Fresh Onion</a></li>
-                        <li><a href="#">Papayaya & Crisps</a></li>
-                        <li><a href="#">Oatmeal</a></li>
-                        <li><a href="#">Fresh Bananas</a></li>
+                        <li><a href="#">Sinh nhật</a></li>
+                        <li><a href="#">Ngày cưới</a></li>
+                        <li><a href="#">Chúc mùng</a></li>
+                        <li><a href="#">Trung thu</a></li>
+                        <li><a href="#">Valentine</a></li>
                     </ul>
                 </div>
             </div>
@@ -33,10 +27,6 @@
                 <div class="hero__search">
                     <div class="hero__search__form">
                         <form action="#">
-                            <div class="hero__search__categories">
-                                Chủ đề
-                                <span class="arrow_carrot-down"></span>
-                            </div>
                             <input type="text" placeholder="Bạn cần tìm gì?">
                             <button type="submit" class="site-btn">Tìm kiếm</button>
                         </form>
@@ -46,8 +36,8 @@
                             <i class="fa fa-phone"></i>
                         </div>
                         <div class="hero__search__phone__text">
-                            <h5>+0367 888 655</h5>
-                            <span>Hỗ trợ 24/7</span>
+                            <h5>0367 888 655</h5>
+                            <span>hỗ trợ 24/7</span>
                         </div>
                     </div>
                 </div>
