--- a/SHA_Shop/Assets/user/css/style.css
+++ b/SHA_Shop/Assets/user/css/style.css
@@ -323,82 +323,12 @@ ol {
 	margin-right: 0;
 }
 
-/*.header__top__right__language {
-	position: relative;
-	display: inline-block;
-	margin-right: 40px;
-	cursor: pointer;
-}
-
-.header__top__right__language:hover ul {
-	top: 23px;
-	opacity: 1;
-	visibility: visible;
-}
-
-.header__top__right__language:after {
-	position: absolute;
-	right: -21px;
-	top: 1px;
-	height: 20px;
-	width: 1px;
-	background: #000000;
-	opacity: 0.1;
-	content: "";
-}
-
-.header__top__right__language img {
-	margin-right: 6px;
-}
-
-.header__top__right__language div {
-	font-size: 14px;
-	color: #1c1c1c;
-	display: inline-block;
-	margin-right: 4px;
-}
-
-.header__top__right__language span {
-	font-size: 14px;
-	color: #1c1c1c;
-	position: relative;
-	top: 2px;
-}
-
-.header__top__right__language ul {
-	background: #222222;
-	width: 100px;
-	text-align: left;
-	padding: 5px 0;
-	position: absolute;
-	left: 0;
-	top: 43px;
-	z-index: 9;
-	opacity: 0;
-	visibility: hidden;
-	-webkit-transition: all, 0.3s;
-	-moz-transition: all, 0.3s;
-	-ms-transition: all, 0.3s;
-	-o-transition: all, 0.3s;
-	transition: all, 0.3s;
-}
-
-.header__top__right__language ul li {
-	list-style: none;
-}
-
-.header__top__right__language ul li a {
-	font-size: 14px;
-	color: #ffffff;
-	padding: 5px 10px;
-}
-*/
 .header__top__right__auth {
 	display: inline-block;
 }
 
 .header__top__right__auth a {
-	display: block;
+	margin-right: 10px;
 	font-size: 14px;
 	color: #1c1c1c;
 }
@@ -1622,7 +1552,7 @@ ol {
 
 .product__pagination,
 .blog__pagination {
-	padding-top: 10px;
+	padding-left: 5px;
 }
 
 .product__pagination a,
@@ -1644,12 +1574,12 @@ ol {
 	transition: all, 0.3s;
 }
 
-.product__pagination a:hover,
-.blog__pagination a:hover {
-	background: #7fad39;
-	border-color: #7fad39;
-	color: #ffffff;
-}
+	.product__pagination a:hover,
+	.blog__pagination a:hover {
+		background: #ff3a95;
+		border-color: #7fad39;
+		color: #ffffff;
+	}
 
 .product__pagination a:last-child,
 .blog__pagination a:last-child {
