--- a/SHA_Shop/Views/User/Login.cshtml
+++ b/SHA_Shop/Views/User/Login.cshtml
@@ -1,72 +1,89 @@
-﻿
-@{
-    Layout = null;
-}
+﻿@model SHA_Shop.Models.NGUOIDUNG
+@{ Layout = null; }
 
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <!-- Required meta tags -->
+
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!--CSS Login-->
-    <link href="~/Assets/user/css/login.css" rel="stylesheet" />
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <title>Login</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Đăng nhập</title>
+
+    <!-- Custom fonts for this template-->
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
+
+    <!-- Custom styles for this template-->
+    <link href="~/Assets/user/css/User.css" rel="stylesheet" />
+    <link href="~/Assets/user/css/sb-admin-2.css" rel="stylesheet">
 
 </head>
-<body>
+
+<body class="bg-gradient-primary">
+
+    <style>
+        form.user .form-control-user, .btn.btn-primary.btn-user.btn-block, .small {
+            font-size: 1rem;
+        }
+    </style>
+
     <div class="container">
         <div class="row px-3">
-            <div class="col-lg-10 col-lg-9 card flex-row mx-auto px-0">
+            <div class="col-lg-7 card flex-row mx-auto px-0" style="margin-top: 120px">
                 <div class="img-left d-none d-md-flex"></div>
-
                 <div class="card-body">
-                    <h3 class="title text-center mt-4">
+                    <h3 class="title text-center mt-4 text-gray-900 font-weight-bold mb-4">
                         Đăng nhập
                     </h3>
-                    <form class="form-box px-3">
-                        <div class="form-input">
-                            <span><i class="fa fa-envelope-o"></i></span>
-                            <input type="email" name="" placeholder="Email" tabindex="10" required />
+                    @using (Html.BeginForm("Login", "User", FormMethod.Post, new { @class = "user" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        <div class="form-group">
+                            @Html.TextBoxFor(x => x.TaiKhoan, new { @class = "form-control form-control-user", @placeholder = "Tài khoản" })
+                            @Html.ValidationMessageFor(m => m.TaiKhoan, "", new { @class = "text-danger" })
+                            @if (ViewBag.error != null)
+                            {
+                                <span class="text-danger">@ViewBag.error</span>
+                            }
                         </div>
-                        <div class="form-input">
-                            <span><i class="fa fa-key"></i></span>
-                            <input type="password" name="" placeholder="Password" required />
+                        <div class="form-group">
+                            @Html.PasswordFor(x => x.MatKhau, new { @class = "form-control form-control-user", @placeholder = "Mật khẩu" })
+                            @Html.ValidationMessageFor(m => m.MatKhau, "", new { @class = "text-danger" })
+                            @if (ViewBag.error != null)
+                            {
+                                <span class="text-danger">@ViewBag.error</span>
+                            }
                         </div>
-
-                        <div class="mb-3">
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="cb1" name="" />
-                                <label class="custom-control-label" for="cb1">Remember me</label>
-                            </div>
-                        </div>
-
-                        <div class="mb-3">
-                            <button type="submit" class="btn-block text-uppercase">
-                                Đăng nhập
-                            </button>
-                        </div>
-
-                        <div class="text-center">
-                            <a href="#" class="forget-link">
-                                Quên mật khẩu?
-                            </a>
-                        </div>
-                        <hr class="my-4" />
-
-                        <div class="text-center mb-2">
-                            Bạn chưa có tài khoản?
-                            <a href="/User/Register" class="register-link">
-                                Đăng ký tại đây
-                            </a>
-                        </div>
-                    </form>
+                        <button type="submit" class="btn btn-primary btn-user btn-block">
+                            Đăng nhập
+                        </button>
+                    }
+                    <hr>
+                    <div class="text-center">
+                        <p>Bạn chưa có tài khoản? <a class="small" href="/User/Register">Đăng ký</a></p>
+                    </div>
+                    <div class="text-center">
+                        <a class="small" href="forgot-password.html">Quên mật khẩu?</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- Bootstrap core JavaScript-->
+    <script src="~/Content/assets/vendor/jquery/jquery.min.js"></script>
+    <script src="~/Content/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Core plugin JavaScript-->
+    <script src="~/Content/assets/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Custom scripts for all pages-->
+    <script src="~/Content/assets/js/sb-admin-2.min.js"></script>
+
 </body>
+
 </html>
