--- a/SHA_Shop/Views/User/Register.cshtml
+++ b/SHA_Shop/Views/User/Register.cshtml
@@ -1,77 +1,112 @@
-﻿
+﻿@model SHA_Shop.Models.NGUOIDUNG
 @{
     Layout = null;
 }
 
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <!-- Required meta tags -->
+
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!--CSS Login-->
-    <link href="~/Assets/user/css/login.css" rel="stylesheet" />
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <title>Register</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Đăng ký</title>
+
+    <!-- Custom fonts for this template-->
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
+
+    <!-- Custom styles for this template-->
+    <link href="~/Assets/user/css/User.css" rel="stylesheet" />
+    <link href="~/Assets/user/css/sb-admin-2.css" rel="stylesheet">
 
 </head>
-<body>
+
+<body class="bg-gradient-primary">
+
+    <style>
+        form.user .form-control-user, .btn.btn-primary.btn-user.btn-block, .small {
+            font-size: 1rem;
+        }
+    </style>
+
     <div class="container">
         <div class="row px-3">
-            <div class="col-lg-10 col-lg-9 card flex-row mx-auto px-0">
+            <div class="col-lg-10 col-lg-9 card flex-row mx-auto px-0" style="margin-top: 70px">
                 <div class="img-left d-none d-md-flex"></div>
-
                 <div class="card-body">
-                    <h3 class="title text-center mt-4">
+                    <h3 class="title text-center mt-4 text-gray-900 font-weight-bold mb-4">
                         Đăng ký
                     </h3>
-                    <form class="form-box px-3">
-                        <div class="form-input">
-                            <span><i class="fa fa-user"></i></span>
-                            <input type="text" name="" placeholder="Tài khoản" tabindex="10" required />
+                    @using (Html.BeginForm("Register", "User", FormMethod.Post, new { @class = "user" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        <div class="form-group row">
+                            <div class="col-sm-6 mb-3 mb-sm-0">
+                                @Html.TextBoxFor(x => x.HoTen, new { @class = "form-control form-control-user", @placeholder = "Họ Tên" })
+                                @Html.ValidationMessageFor(m => m.HoTen, "", new { @class = "text-danger" })
+                            </div>
+                            <div class="col-sm-6">
+                                @Html.TextBoxFor(x => x.TaiKhoan, new { @class = "form-control form-control-user", @placeholder = "Tài khoản" })
+                                @Html.ValidationMessageFor(m => m.TaiKhoan, "", new { @class = "text-danger" })
+                                @if (ViewBag.error != null)
+                                {
+                                    <span class="text-danger">@ViewBag.error</span>
+                                }
+                            </div>
                         </div>
-
-                        <div class="form-input">
-                            <span><i class="fa fa-key"></i></span>
-                            <input type="password" name="" placeholder="Password" required />
+                        <div class="form-group">
+                            @Html.TextBoxFor(x => x.Email, new { @class = "form-control form-control-user", @placeholder = "Email" })
+                            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                            @if (ViewBag.error != null)
+                            {
+                                <span class="text-danger">@ViewBag.error1</span>
+                            }
                         </div>
-
-                        <div class="form-input">
-                            <span><i class="fa fa-envelope-o"></i></span>
-                            <input type="email" name="" placeholder="Email" tabindex="10" required />
+                        <div class="form-group row">
+                            <div class="col-sm-6 mb-3 mb-sm-0">
+                                @Html.PasswordFor(x => x.MatKhau, new { @class = "form-control form-control-user", @placeholder = "Mật khẩu" })
+                                @Html.ValidationMessageFor(m => m.MatKhau, "", new { @class = "text-danger" })
+                            </div>
+                            <div class="col-sm-6">
+                                @Html.PasswordFor(x => x.NhapLaiMatKhau, new { @class = "form-control form-control-user", @placeholder = "Nhập lại mật khẩu" })
+                                @Html.ValidationMessageFor(m => m.NhapLaiMatKhau, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-
-
-                        <div class="form-input">
-                            <span><i class="fa fa-snapchat-ghost"></i></span>
-                            <input type="text" name="" placeholder="Họ tên" required />
+                        <div class="form-group">
+                            @Html.TextBoxFor(x => x.DiaChi, new { @class = "form-control form-control-user", @placeholder = "Địa chỉ" })
+                            @Html.ValidationMessageFor(m => m.DiaChi, "", new { @class = "text-danger" })
                         </div>
-
-                        <div class="form-input">
-                            <span><i class="fa fa-map-marker"></i></span>
-                            <input type="text" name="" placeholder="Địa chỉ" required />
+                        <div class="form-group">
+                            @Html.TextBoxFor(x => x.SDT, new { @class = "form-control form-control-user", @placeholder = "Số điện thoại" })
+                            @Html.ValidationMessageFor(m => m.SDT, "", new { @class = "text-danger" })
                         </div>
-                    
-                        <div class="mb-3">
-                            <button type="submit" class="btn-block text-uppercase">
-                                Đăng ký
-                            </button>
-                        </div>
-
-                        <hr class="my-4" />
-
-                        <div class="text-center mb-2">
-                            Bạn đă có tài khoản?
-                            <a href="/User/Login" class="register-link">
-                                Đăng nhập tại đây
-                            </a>
-                        </div>
-                    </form>
+                        <button type="submit" class="btn btn-primary btn-user btn-block">
+                            Đăng ký
+                        </button>
+                    }
+                    <hr>
+                    <div class="text-center">
+                        <p>Bạn đã có tài khoản? <a class="small" href="/User/Login">Đăng nhập!</a></p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- Bootstrap core JavaScript-->
+    <script src="~/Content/assets/vendor/jquery/jquery.min.js"></script>
+    <script src="~/Content/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Core plugin JavaScript-->
+    <script src="~/Content/assets/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Custom scripts for all pages-->
+    <script src="~/Content/assets/js/sb-admin-2.min.js"></script>
+
 </body>
+
 </html>
