--- a/SHA_Shop/Views/Product/Index.cshtml
+++ b/SHA_Shop/Views/Product/Index.cshtml
@@ -78,24 +78,13 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-5">
                             <div class="filter__sort">
-                                <span>Sort By</span>
+                                <span>Sắp xếp theo</span>
                                 <select>
-                                    <option value="0">Default</option>
-                                    <option value="0">Default</option>
+                                    <option value="0">Mặc định</option>
+                                    <option value="0">Giá giảm dần</option>
                                 </select>
                             </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4">
-                            <div class="filter__found">
-                                <h6><span>16</span> Products found</h6>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-3">
-                            <div class="filter__option">
-                                <span class="icon_grid-2x2"></span>
-                                <span class="icon_ul"></span>
-                            </div>
-                        </div>
+                        </div>                                           
                     </div>
                 </div>
                 <div class="row">
