--- a/SHA_Shop/Views/Product/ListProduct.cshtml
+++ b/SHA_Shop/Views/Product/ListProduct.cshtml
@@ -35,11 +35,11 @@
                 <div class="product__item__pic set-bg" data-setbg="@Url.Content("~/Assets/User/img/product/" +item.Anh)">
                     <ul class="product__item__pic__hover">
                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                        <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                        <li><a href="@Url.Action("AddShopCart", "ShopCart", new { @iMaSP = item.MaSP, @strURL = Request.Url.ToString()})"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
                 </div>
                 <div class="product__item__text">
-                    <h6><a href="#">@item.TenSP</a></h6>
+                    <h6><a href="/">@item.TenSP</a></h6>
                     <h5>@item.GiaSP₫</h5>
                 </div>
             </div>
