--- a/SHA_Shop/Views/Shared/_Layout.cshtml
+++ b/SHA_Shop/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -13,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="/Assets/user/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="/Assets/user/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="/Assets/user/css/elegant-icons.css" type="text/css">
@@ -46,11 +48,11 @@
             <div class="header__top__right__auth">
                 @if (Session["TaiKhoan"] != null)
                 {
-                    <span>@Session["TaiKhoan"]</span>
+    <span>@Session["TaiKhoan"]</span>
                     <a href="@Url.Action("LogOut", "User")"><i class="fa fa-user"></i> Đăng xuất</a> }
                 else
                 {
-                    <a href="/User/Login"><i class="fa fa-user"></i> Đăng nhập</a>
+    <a href="/User/Login"><i class="fa fa-user"></i> Đăng nhập</a>
                     <a href="/User/Register"><i class="fa fa-user"></i> Đăng ký</a>}
             </div>
         </div>
@@ -100,22 +102,22 @@
                             <div class="header__top__right__auth">
                                 @if (Session["TaiKhoan"] != null)
                                 {
-                                    <div class="account d-flex">
-                                    <ul style="display: block">
-                                    <div><i class="fa fa-user"></i> @Session["TaiKhoan"] </div>
-                                        <li>
-                                            <a href="@Url.Action("LogOut", "User")"> Đăng xuất</a>
-                                        </li>
-                                    </ul>                                   
-                                    </div>
-                                 }
-                                else
-                                {
-                                    <div class="d-flex">
-                                    <a href="/User/Login" class="mr-4"><i class="fa fa-user"></i> Đăng nhập</a>
-                                    <a href="/user/register"><i class="fa fa-user-plus"></i> đăng ký</a>
-                                   </div>
-                                }
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                            @Session["TaiKhoan"]
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <li><a class="dropdown-item" href="@Url.Action("LogOut", "User")">Đăng xuất</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </div> }
+                else
+                {
+    <div class="d-flex">
+        <a href="/User/Login" class="mr-4"><i class="fa fa-user"></i> Đăng nhập</a>
+        <a href="/user/register"><i class="fa fa-user-plus"></i> đăng ký</a>
+    </div>}
                             </div>
                         </div>
                     </div>
@@ -145,7 +147,7 @@
                     <div class="header__cart">
                         <ul>
                             <li><a href="/Checkout"><i class="fa fa-money"></i> <span>1</span></a></li>
-                            <li><a href="/ShopCart"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
+                            @Html.Action("ShopCartPartial", "ShopCart")
                         </ul>
 
                     </div>
@@ -232,7 +234,9 @@
     <script src="/Assets/user/js/mixitup.min.js"></script>
     <script src="/Assets/user/js/owl.carousel.min.js"></script>
     <script src="/Assets/user/js/main.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
