--- a/SHA_Shop/Views/Checkout/Index.cshtml
+++ b/SHA_Shop/Views/Checkout/Index.cshtml
@@ -68,54 +68,31 @@
         <div class="row">
             <div class="col-lg-12">
                 <h6>
-                    <span class="icon_tag_alt"></span> Have a coupon? <a href="#">Click here</a> to enter your code
+                    <span class="icon_tag_alt"></span> Bạn có mã giảm giá? <a href="#">Bấm vào đây</a> để nhập mã
                 </h6>
             </div>
         </div>
         <div class="checkout__form">
-            <h4>Billing Details</h4>
+            <h4>Chi tiết thanh toán</h4>
             <form action="#">
                 <div class="row">
                     <div class="col-lg-8 col-md-6">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="checkout__input">
-                                    <p>Fist Name<span>*</span></p>
-                                    <input type="text">
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="checkout__input">
-                                    <p>Last Name<span>*</span></p>
-                                    <input type="text">
-                                </div>
-                            </div>
-                        </div>
                         <div class="checkout__input">
-                            <p>Country<span>*</span></p>
+                            <p>Họ & Tên<span>*</span></p>
                             <input type="text">
                         </div>
                         <div class="checkout__input">
-                            <p>Address<span>*</span></p>
-                            <input type="text" placeholder="Street Address" class="checkout__input__add">
-                            <input type="text" placeholder="Apartment, suite, unite ect (optinal)">
+                            <p>Địa chỉ<span>*</span></p>
+                            <input type="text" class="checkout__input__add">
                         </div>
                         <div class="checkout__input">
-                            <p>Town/City<span>*</span></p>
-                            <input type="text">
-                        </div>
-                        <div class="checkout__input">
-                            <p>Country/State<span>*</span></p>
-                            <input type="text">
-                        </div>
-                        <div class="checkout__input">
-                            <p>Postcode / ZIP<span>*</span></p>
+                            <p>Tỉnh/Thành phố<span>*</span></p>
                             <input type="text">
                         </div>
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="checkout__input">
-                                    <p>Phone<span>*</span></p>
+                                    <p>Điên thoại<span>*</span></p>
                                     <input type="text">
                                 </div>
                             </div>
