--- a/SHA_Shop/Views/Product/ProductDetail.cshtml
+++ b/SHA_Shop/Views/Product/ProductDetail.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model SHA_Shop.Models.SANPHAM
+@{
     ViewBag.Title = "ProductDetail";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -14,13 +15,7 @@
                         <i class="fa fa-bars"></i>
                         <span>Danh mục</span>
                     </div>
-                    <ul>
-                        <li><a href="#">Sinh nhật</a></li>
-                        <li><a href="#">Ngày cưới</a></li>
-                        <li><a href="#">Chúc mùng</a></li>
-                        <li><a href="#">Trung thu</a></li>
-                        <li><a href="#">Valentine</a></li>
-                    </ul>
+                    @Html.Action("CategoryPartial", "Category")
                 </div>
             </div>
             <div class="col-lg-9">
@@ -52,10 +47,10 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <div class="breadcrumb__text">
-                    <h2>Liên hệ với chúng tôi</h2>
+                    <h2>Chi tiết sản phẩm</h2>
                     <div class="breadcrumb__option">
                         <a href="/">Trang chủ</a>
-                        <span>Liên hệ</span>
+                        <span>Chi tiết sản phẩm</span>
                     </div>
                 </div>
             </div>
@@ -71,36 +66,32 @@
                 <div class="product__details__pic">
                     <div class="product__details__pic__item">
                         <img class="product__details__pic__item--large"
-                             src="/Assets/user/img/product/details/product-details-1.jpg" alt="">
+                             src="@Url.Content("~/Assets/User/img/product/" + @Model.Anh)" alt="">
                     </div>
-                    <div class="product__details__pic__slider owl-carousel">
-                        <img data-imgbigurl="img/product/details/product-details-2.jpg"
-                             src="/Assets/user/img/product/details/thumb-1.jpg" alt="">
-                        <img data-imgbigurl="img/product/details/product-details-3.jpg"
-                             src="/Assets/user/img/product/details/thumb-2.jpg" alt="">
+                    @*<div class="product__details__pic__slider owl-carousel">
+                        <img src="@Url.Content("~/Assets/User/img/product/" + @Model.Anh)" alt="">
+                        <img src="@Url.Content("~/Assets/User/img/product/" + @Model.Anh)" alt="">
                         <img data-imgbigurl="img/product/details/product-details-5.jpg"
-                             src="/Assets/user/img/product/details/thumb-3.jpg" alt="">
+                             src="@Url.Content("~/Assets/User/img/product/" + @Model.Anh)" alt="">
                         <img data-imgbigurl="img/product/details/product-details-4.jpg"
-                             src="/Assets/user/img/product/details/thumb-4.jpg" alt="">
-                    </div>
+                             src="@Url.Content("~/Assets/User/img/product/" + @Model.Anh)" alt="">
+                    </div>*@
                 </div>
             </div>
             <div class="col-lg-6 col-md-6">
                 <div class="product__details__text">
-                    <h3>Vetgetable’s Package</h3>
+                    <h3>@Model.TenSP</h3>
                     <div class="product__details__rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-half-o"></i>
-                        <span>(18 reviews)</span>
+                        @*<span>(18 reviews)</span>*@
                     </div>
-                    <div class="product__details__price">$50.00</div>
+                    <div class="product__details__price">@Model.GiaSP</div>
                     <p>
-                        Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vestibulum ac diam sit amet quam
-                        vehicula elementum sed sit amet dui. Sed porttitor lectus nibh. Vestibulum ac diam sit amet
-                        quam vehicula elementum sed sit amet dui. Proin eget tortor risus.
+                        @Model.ChiTiet
                     </p>
                     <div class="product__details__quantity">
                         <div class="quantity">
@@ -109,7 +100,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="#" class="primary-btn">ADD TO CARD</a>
+                    <a href="@Url.Action("AddShopCart", "ShopCart", new { @iMaSP = @Model.MaSP, @strURL = Request.Url.ToString()})" class="primary-btn">Thêm vào giỏ hàng</a>
                     <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
                     <ul>
                         <li><b>Availability</b> <span>In Stock</span></li>
