--- a/SHA_Shop/Views/Shared/_Layout.cshtml
+++ b/SHA_Shop/Views/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
         </div>
     </div>
     <!-- Humberger End -->
-    <!-- Header Section Begin -->
+    @*Header Section Begin*@
     <header class="header">
         <div class="header__top">
             <div class="container">
@@ -101,23 +101,17 @@
                             </div>
                             <div class="header__top__right__auth">
                                 @if (Session["TaiKhoan"] != null)
+                                {                                         
+                                    @Session["TaiKhoan"]
+                                    <a href="@Url.Action("LogOut", "User")" class="ml-4">Đăng xuất</a>                                                                                              
+                                }
+                                else
                                 {
-                    <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                            @Session["TaiKhoan"]
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <li><a class="dropdown-item" href="@Url.Action("LogOut", "User")">Đăng xuất</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </div> }
-                else
-                {
-    <div class="d-flex">
-        <a href="/User/Login" class="mr-4"><i class="fa fa-user"></i> Đăng nhập</a>
-        <a href="/user/register"><i class="fa fa-user-plus"></i> đăng ký</a>
-    </div>}
+                                    <div class="d-flex">
+                                    <a href="/User/Login" class="mr-4"><i class="fa fa-user"></i> Đăng nhập</a>
+                                    <a href="/user/register"><i class="fa fa-user-plus"></i> đăng ký</a>
+                                    </div>
+                                 }
                             </div>
                         </div>
                     </div>
