--- a/SHA_Shop/Views/ShopCart/Index.cshtml
+++ b/SHA_Shop/Views/ShopCart/Index.cshtml
@@ -87,17 +87,22 @@
                                         @String.Format("{0:0,0}", item.dGiaSP) ₫
                                     </td>
                                     <td class="shoping__cart__quantity">
-                                        <div class="quantity">
-                                            <div class="pro-qty">
-                                                <input type="text" value="@item.iSoLuong">
+                                        @using (Html.BeginForm("UpdateShopCart", "ShopCart", new { @iMaSP = item.iMaSP }))
+                                        {
+                                            <div class="quantity">
+                                                <div class="pro-qty">
+                                                   
+                                                    <input type="text" min="1" name="txtSoluong" value="@item.iSoLuong">
+                                                   
+                                                </div>
                                             </div>
-                                        </div>
+                                        }
                                     </td>
                                     <td class="shoping__cart__total">
                                         @String.Format("{0:0,0}", item.dThanhTien) ₫
                                     </td>
                                     <td class="shoping__cart__item__close">
-                                        <span class="icon_close"></span>
+                                        <a href="@Url.Action("DeleteShopCart", "ShopCart", new {@iMaSP = item.iMaSP })"><span class="icon_close"></span></a>
                                     </td>
                                 </tr>
                             }
@@ -109,32 +114,32 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="shoping__cart__btns">
-                    <a href="#" class="primary-btn cart-btn">CONTINUE SHOPPING</a>
-                    <a href="#" class="primary-btn cart-btn cart-btn-right">
+                    <a href="/Product" class="primary-btn cart-btn">Tiếp tục mua bánh</a>
+                    <a href="@Url.Action("UpdateShopCart", "ShopCart"@*, new {@iMaSP = Model.iMaSP }*@)" class="primary-btn cart-btn cart-btn-right">
                         <span class="icon_loading"></span>
-                        Upadate Cart
+                        Cập nhật
                     </a>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="shoping__continue">
                     <div class="shoping__discount">
-                        <h5>Discount Codes</h5>
+                        <h5>Mã giảm giá</h5>
                         <form action="#">
-                            <input type="text" placeholder="Enter your coupon code">
-                            <button type="submit" class="site-btn">APPLY COUPON</button>
+                            <input type="text" placeholder="Nhập mã giảm giá">
+                            <button type="submit" class="site-btn">Áp dụng</button>
                         </form>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="shoping__checkout">
-                    <h5>Cart Total</h5>
+                    <h5>Tổng giỏ hàng</h5>
                     <ul>
-                        <li>Subtotal <span>$454.98</span></li>
-                        <li>Total <span>$454.98</span></li>
+                        <li>Số lượng bánh <span>@ViewBag.TotalQuantity</span></li>
+                        <li>Tổng tiền<span>@string.Format("{0:0,0}", ViewBag.SubTotal) ₫</span></li>
                     </ul>
-                    <a href="#" class="primary-btn">PROCEED TO CHECKOUT</a>
+                    <a href="#" class="primary-btn">Thanh toán</a>
                 </div>
             </div>
         </div>
